--- a/front-end-application/src/index.css
+++ b/front-end-application/src/index.css
@@ -30,4 +30,8 @@ code {
   flex-direction: row;
 }
 
+/* img{
+  clip-path: polygon(80% 10%, 88% 60%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); 
+   clip-path: circle(43%);
+} */
 
