--- a/front-end-application/src/index.css
+++ b/front-end-application/src/index.css
@@ -30,8 +30,116 @@ code {
   flex-direction: row;
 }
 
-/* img{
-  clip-path: polygon(80% 10%, 88% 60%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); 
-   clip-path: circle(43%);
-} */
+
+@media only screen and (max-width:319px){
+  .card{
+
+      font-size: 1.1rem;
+  }
+
+}
+
+@media only screen and (min-width:320px) and (max-width:374px){
+  .card{
+
+      font-size: 1.3rem;
+  }
+  .responsive-text{
+    font-size:50%;
+  }
+  img{
+      height:55%;
+  }
+
+}
+
+
+@media only screen and (min-width:375px) and (max-width:424px){
+  .card{
+      font-size: 1.7rem;
+  }
+  .responsive-text{
+    font-size:57%
+  }
+  img{
+      height:55%;
+  }
+
+}
+
+
+@media only screen and (min-width:425px) and (max-width:539px){
+  .card{
+      font-size: 2.3rem;  
+  }
+  .responsive-text{
+    font-size: 65%;
+  }
+  img{
+      height:55%;
+  }
+
+}
+
+@media only screen and (min-width:540px) and (max-width:580px){
+  .card{
+      font-size:2.5rem;   
+  }
+  .responsive-text{
+    font-size: 0.9rem;
+  }
+  img{
+      height:55%;
+  }
+
+}
+
+@media only screen and (min-width:576px) and (max-width:767px){
+  .card{
+      font-size: 0.8rem;
+      
+  }
+
+  img{
+      height:55%;
+  }
+
+}
+
+@media only screen and (min-width:768px) and (max-width:800px){
+  .card{
+      font-size: 85%;
+      
+  }
+  img{
+      height:55%;
+  }
+
+}
+
+@media only screen and (min-width:990px) and (max-width:1024px) {
+  .card{
+
+ 
+      font-size: 1.2rem;   
+  }
+  .responsive-text{
+    font-size: 1rem;
+  }
+  img{
+      height:50%
+  }
+
+
+}
+
+@media only screen and (min-width:1025px){
+  .card{
+      font-size:20px;
+  }
+  .responsive-text{
+    font-size: 1rem;
+  }
+
+}
 
